--- a/Luigi.theme.css
+++ b/Luigi.theme.css
@@ -240,10 +240,10 @@
     left: 11pc;
 }
 /* LAST BUT NOT LEAST PART, THE USER POPOUT AND USER PROFILE MODAL */
-.headerNormal-1cioxU,.body-3rkFrF,.footer-2J5zqP {
+.theme-dark .headerNormal-3Vn9nT,.theme-dark .body-3ljq11, .theme-dark .footer-2wFs91 {
     background: rgba(40,74,18,0.6) !important;
 }
-.headerPlaying-2eYqm9 {
+.headerPlaying-2Q7mBy {
     background: rgba(0, 0, 255,0.3) !important;
 }
 .botTagInvert-gorWR_ {
@@ -253,7 +253,7 @@
     padding-bottom: 4px;
     border: 3px solid #284A12;
 }
-.userPopout-4pfA0d {
+.userPopout-11hFKo {
     border-radius: 33px;
     color: white;
     border: 3px solid #019000;
@@ -264,7 +264,7 @@
 .body-3rkFrF {
     border-bottom: none;
 }
-.headerUsernameNoNickname-1iGxNP,.bodyTitle-yehI7c {
+.headerUsernameNoNickname-1iGxNP,.bodyTitle-18hsd9 {
     color: white;
 }
 .headerDiscriminator-3fLlCR {
@@ -313,17 +313,14 @@
     font-size: 17px;
     padding-left: 6px;
 }
-#user-profile-modal .guilds .section .note textarea {
+.theme-dark .note-2AtC_s textarea {
    padding: 4px 8px;
 }
-.bodyTitleIconForeground-itKW-t,.headerIconForeground-2QFL0Z {
-    fill: white;
-}
-.note textarea:focus {
+.theme-dark .note-2AtC_s textarea:focus {
     background: rgba(40,74,18, 0.6) !important;
     border: 3px solid #019000;
 }
-.note textarea {
+.theme-dark .note-2AtC_s textarea {
     background: rgba(0, 0, 0, 0.3) !important;
     color: white;
 }
@@ -345,10 +342,15 @@
 .avatarNormal-3luwna {
     border: 4px solid #53B047;
 }
+
+.headerSpotify-26yUf5,
+.topSectionSpotify-3744IX {
+    background: rgba(76, 175, 80,0.4);
+}
 .header-3mZJcV .avatarStatusStreaming-3lGjGk {
     background: #600080;
 }
-.headerStreaming-3F-wjT {
+.headerStreaming-lmgoma {
     background: rgba(89, 54, 149,0.5);
 }
 .headerTagStreaming-2FikoO {
@@ -695,7 +697,7 @@
 .theme-dark .user-settings-notifications .notifications-sound {
     box-shadow: none;
 }
-.theme-dark .user-settings-voice .preview-overlay {
+.theme-dark .userSettingsVoice-TvPQ80 .previewOverlay-2vHj3H{
     background-color: rgba(1,144,0,0.3) !important;
     border: 3px solid #019000;
 }
@@ -719,17 +721,17 @@
 .user-settings-voice .media-engine-video {
     background-color: transparent;
 }
-.buttonBrandFilled-3Mv0Ra {
+.lookFilled-luDKDo.colorBrand-3PmwCE {
     background-color: #284A12;
     color: white;
     border: 3px solid #019000;
 }
-.buttonBrandFilled-3Mv0Ra:hover {
+.lookFilled-luDKDo.colorBrand-3PmwCE:hover {
     background-color: #284A12;
     color: white;
     border: 3px outset #019000;
 }
-.buttonBrandFilled-3Mv0Ra:active {
+.lookFilled-luDKDo.colorBrand-3PmwCE:active {
     background-color: #284A12;
     color: white;
     border: 3px inset #019000;
@@ -759,19 +761,19 @@
     border-width: 5px;
     border-style: inset;
 }
-.buttonGreenFilled-6QHNrw {
+.lookFilled-luDKDo.colorGreen-22At8E {
     background-color: #284A12;
     border-color: #019000;
     border-width: 3px;
     border-style: solid;
 }
-.buttonGreenFilled-6QHNrw:hover {
+.lookFilled-luDKDo.colorGreen-22At8E:hover {
     background-color: #284A12;
     border-color: #019000;
     border-width: 3px;
     border-style: outset;
 }
-.buttonGreenFilled-6QHNrw:active {
+.lookFilled-luDKDo.colorGreen-22At8E:active {
     background-color: #284A12;
     border-color: #019000;
     border-width: 3px;
@@ -1699,7 +1701,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
     font-size: 15px;
     text-shadow: 1px 1px 3px #000,1px 1px 3px #000,1px 1px 3px #000;
 }
-.theme-dark .message-group h2 span {
+.theme-dark .message-group h2 .timestamp{
     color: rgba(255, 255, 255, 1) !important;
     font-size: 14px;
 }
