--- a/Peach.theme.css
+++ b/Peach.theme.css
@@ -241,10 +241,10 @@
     left: 11pc;
 }
 /* LAST BUT NOT LEAST PART, THE USER POPOUT AND USER PROFILE MODAL */
-.headerNormal-1cioxU,.body-3rkFrF,.footer-2J5zqP {
+.theme-dark .headerNormal-3Vn9nT,.theme-dark .body-3ljq11, .theme-dark .footer-2wFs91 {
     background: rgba(245,153,178,0.6) !important;
 }
-.headerPlaying-2eYqm9 {
+.headerPlaying-2Q7mBy {
     background: rgba(0, 0, 255,0.3) !important;
 }
 .botTagInvert-gorWR_ {
@@ -254,7 +254,7 @@
     padding-bottom: 4px;
     border: 3px solid #F14E91;
 }
-.userPopout-4pfA0d {
+.userPopout-11hFKo {
     border-radius: 33px;
     color: white;
     border: 3px solid #F14E91;
@@ -265,7 +265,7 @@
 .body-3rkFrF {
     border-bottom: none;
 }
-.headerUsernameNoNickname-1iGxNP,.bodyTitle-yehI7c {
+.headerUsernameNoNickname-1iGxNP,.bodyTitle-18hsd9 {
     color: white;
 }
 .headerDiscriminator-3fLlCR {
@@ -317,14 +317,11 @@
 #user-profile-modal .guilds .section .note textarea {
    padding: 4px 8px;
 }
-.bodyTitleIconForeground-itKW-t,.headerIconForeground-2QFL0Z {
-    fill: white;
-}
-.note textarea:focus {
+.theme-dark .note-2AtC_s textarea:focus {
     background: rgba(243,60,136, 0.6) !important;
     border: 3px solid #F599B2;
 }
-.note textarea {
+.theme-dark .note-2AtC_s textarea {
     background: rgba(0, 0, 0, 0.3) !important;
     color: white;
 }
@@ -349,7 +346,13 @@
 .header-3mZJcV .avatarStatusStreaming-3lGjGk {
     background: #600080;
 }
-.headerStreaming-3F-wjT {
+
+.headerSpotify-26yUf5,
+.topSectionSpotify-3744IX {
+    background: rgba(76, 175, 80,0.4);
+}
+.headerStreaming-lmgoma,
+.topSectionStreaming-3rIBIm {
     background: rgba(89, 54, 149,0.5);
 }
 .headerTagStreaming-2FikoO {
@@ -700,7 +703,7 @@
 .theme-dark .user-settings-notifications .notifications-sound {
     box-shadow: none;
 }
-.theme-dark .user-settings-voice .preview-overlay {
+.theme-dark .userSettingsVoice-TvPQ80 .previewOverlay-2vHj3H{
     background-color: rgba(243,60,136,0.3) !important;
     border: 3px solid #F14E91;
 }
@@ -724,17 +727,17 @@
 .user-settings-voice .media-engine-video {
     background-color: transparent;
 }
-.buttonBrandFilled-3Mv0Ra {
+.lookFilled-luDKDo.colorBrand-3PmwCE {
     background-color: #F599B2;
     color: white;
     border: 3px solid #F14E91;
 }
-.buttonBrandFilled-3Mv0Ra:hover {
+.lookFilled-luDKDo.colorBrand-3PmwCE:hover {
     background-color: #F599B2;
     color: white;
     border: 3px outset #F14E91;
 }
-.buttonBrandFilled-3Mv0Ra:active {
+.lookFilled-luDKDo.colorBrand-3PmwCE:active {
     background-color: #F599B2;
     color: white;
     border: 3px inset #F14E91;
@@ -764,19 +767,22 @@
     border-width: 5px;
     border-style: inset;
 }
-.buttonGreenFilled-6QHNrw {
+.theme-dark .select-3JqNgs .Select-control .Select-placeholder {
+    color: white;
+}
+.lookFilled-luDKDo.colorGreen-22At8E {
     background-color: #F14E91;
     border-color: #F599B2;
     border-width: 3px;
     border-style: solid;
 }
-.buttonGreenFilled-6QHNrw:hover {
+.lookFilled-luDKDo.colorGreen-22At8E:hover {
     background-color: #F14E91;
     border-color: #F599B2;
     border-width: 3px;
     border-style: outset;
 }
-.buttonGreenFilled-6QHNrw:active {
+.lookFilled-luDKDo.colorGreen-22At8E:active {
     background-color: #F14E91;
     border-color: #F599B2;
     border-width: 3px;
@@ -1704,7 +1710,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
     font-size: 15px;
     text-shadow: 1px 1px 3px #000,1px 1px 3px #000,1px 1px 3px #000;
 }
-.theme-dark .message-group h2 span {
+.theme-dark .message-group h2 .timestamp{
     color: rgba(255, 255, 255, 1) !important;
     font-size: 14px;
 }
